--- a/views/base.html
+++ b/views/base.html
@@ -12,7 +12,7 @@
     {{#libs.external.css}}
     <link href="{{.}}" rel="stylesheet" type="text/css" media="all" />
     {{/libs.external.css}}
-    
+
     {{#libs.css}}
     <link href="{{root}}{{.}}" rel="stylesheet" type="text/css" media="all" />
     {{/libs.css}}
@@ -20,10 +20,16 @@
     {{#libs.external.js}}
     <script src="{{.}}" type="text/javascript" charset="utf-8"></script>
     {{/libs.external.js}}
-    
+
     {{#libs.js}}
     <script src="{{root}}{{.}}" type="text/javascript" charset="utf-8"></script>
     {{/libs.js}}
+
+    <style>
+        textarea.form-control {
+            min-height: 200px;
+        }
+    </style>
 </head>
 <body id="express-admin" class="container">
 
@@ -33,7 +39,7 @@
 
     <section id="content">
         {{>breadcrumbs}}
-        
+
         {{>content}}
     </section>
 
